// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - isBuilding 1`] = `
<styled.div
  className="isBuilding"
>
  <span>
     
  </span>
</styled.div>
`;

exports[`renders correctly - isHealthy 1`] = `
<styled.div
  className="isHealthy"
>
  <span>
     
  </span>
</styled.div>
`;

exports[`renders correctly - isNone 1`] = `
<styled.div
  className="isNone"
>
  <span>
     
  </span>
</styled.div>
`;

exports[`renders correctly - isPending 1`] = `
<styled.div
  className="isPending"
>
  <span>
     
  </span>
</styled.div>
`;

exports[`renders correctly - isUnhealthy 1`] = `
<styled.div
  className="isUnhealthy"
>
  <ForwardRef(SvgError)
    fill="#fff"
    height="12px"
    width="12px"
  />
</styled.div>
`;

exports[`renders correctly - isWarning 1`] = `
<styled.div
  className="isWarning"
>
  <ForwardRef(SvgWarning)
    fill="#fff"
    height="9px"
    width="9px"
  />
</styled.div>
`;
